Add optional normalisation of the results
Signed-off-by: John Else <john.else@citrix.com>

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </p>
         <p>
             <button id="docalc">go</button>
+            <label><input type="checkbox" id="normalise"> normalise</label>
         </p>
     </body>
 </html>
