--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <p>
+            Enter dice as comma-separated lists of integers, one die per line:
+        </p>
+        <p>
             <textarea rows="5" cols="50" id="dice"></textarea>
         </p>
         <p>
